# fastapi-auth-with-grc

./: .gitignore  Dockerfile  README.md  alembic.ini  client.py  grpc_server.py  main.py  pyproject.toml  requirements.txt  requirements2.txt  ruff.toml  server.py  settings.py
alembic/: env.py
alembic/versions/: 2024-04-23_create_phone_verify_and_user_verify_.py  2024-04-24_create_session_tables_user_tables.py  2024-04-30_add_default_value_for_roles_field.py  2024-04-30_add_foreign_key.py  2024-04-30_little_change_type_inside_table_and_add_.py  2024-05-20_change_architecture_usermeta_and_.py  c624d9ac8d78_create_user_with_phone_and_email.py
auth_service/: __init__.py  auth_service_servicer.py  extratype_decorator.py  interceptor.py  methods.py  status.py  stream_maker.py
core/: client.py  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
core/db/: session.py  session_dals.py  user_dals.py
core/exceptions/: __init__.py  db.py  jwt.py  sql.py  stream.py  time.py  type.py
core/models/: __init__.py  session.py  session.pyi  user.py  user.pyi  user_meta.py  user_meta.pyi
core/models/pydantic_models/: __init__.py  user.py
core/models/pydantic_models/type/: password.py  phone.py
core/protobuff/: sesion.proto  user.proto
core/pydantic_models/: __init__.py  user.py
core/pydantic_models/type/: __init__.py  email.py  helpers.py  mac_id.py  password.py  phone.py
core/utils/: __init__.py  channels.py  decorators.py  dump_to_dict.py  exceptions.py  expire_time.py  jwt.py  logger.py  params.py  terminal.py  verify_key.py
core/utils/data_structure/: __init__.py  comparator.py  linked_link.py  queue.py
core/utils/session_store/: models.py  store.py
protobuff/: __init__.py  session.proto  session_pb2.py  session_pb2.pyi  session_pb2_grpc.py  user.proto  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
